--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 * {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0 ;
   padding: 0;
+  position: 0;
 }
-
+.main {
+  position: relative;
+}
 .background {
-  display: block;
+  position: absolute;
   width: 100%;
   height: 100%;
   min-height: 100%;
@@ -14,7 +17,12 @@
 	background-position: center;
 	background-size: cover;
 }
-.aka {
-  color:red;
-  font-size: 50px;
+.fullmoon {
+  margin: 10.5% 33.7%;
+  width: 33%;
+  height: auto;
+  position: absolute;
+
+  
+  
 }
