--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   padding: 0;
   position: 0;
 }
+.header1 {
+  width: 100%;
+  height: 60px;
+  background-color: #080F20;
+  color: white;
+}
 .main {
   position: relative;
 }
